# darkswap

./: .clinerules  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.fixed  Dockerfile.new  README-Bridge.md  README-WebAssembly-Integration.md  README-WebRTC-Wallet-Integration.md  README.md  RELEASE_NOTES.md  bitcoin-integration-guide.md  bitcoin_utils_test.rs  build-all.sh  build-bridge.sh  build-phase2.sh  build-wasm-minimal.sh  build-wasm-optimized.sh  build-wasm.sh  build.sh  consolidated-darkswap-summary.md  darkswap-consolidated-roadmap-updated.md  darkswap-consolidated-roadmap.md  darkswap-next-steps.md  darkswap-phase3-next-steps.md  darkswap-phase3-progress.md  darkswap-project-analysis.md  darkswap-wasm-integration-summary-revised.md  darkswap-wasm-integration-summary.md  darkswap-wasm-remaining-tasks-revised.md  darkswap-wasm-remaining-tasks.md  darkswap-whitepaper.aux  darkswap-whitepaper.out  darkswap-whitepaper.tex  darkswap-whitepaper.toc  deploy-production.sh  deploy-staging.sh  deploy.sh  docker-compose.yml  fix-git-author.md  (+36 more)
darkswap-bridge/: Cargo.toml  Dockerfile  NEXT-STEPS.md  README-Web.md  README.md  build.sh  docker-compose.yml  optimize-wasm.sh
darkswap-bridge/e2e/: network.test.js  orderbook.test.js  settings.test.js  trades.test.js  wallet.test.js
darkswap-bridge/mobile/: .env.development  .env.production  App.tsx  README.md  app.json  install-dependencies.sh  jest.config.js  package-lock.json  package.json  run-app.sh  setup-tests.sh  tsconfig.json
darkswap-bridge/monitoring/: prometheus.yml
darkswap-bridge/performance/: endurance.test.js  load.test.js  stress.test.js
darkswap-bridge/scripts/: deploy.sh  start.sh  stop.sh
darkswap-bridge/server/: .env.example  Dockerfile  package.json
darkswap-bridge/src/: auth.rs  bridge.rs  config.rs  error.rs  integration.rs  ipc.rs  lib.rs  message.rs  storage.rs  utils.rs
darkswap-bridge/web/: Dockerfile  README.md  nginx.conf  package.json
darkswap-cli/: Cargo.toml  README.md
darkswap-cli/src/: main.rs
darkswap-core/darkswap-lib/: Cargo.toml  README.md  build.sh
darkswap-daemon/: Cargo.toml  Dockerfile  README.md  com.darkswap.daemon.plist  config.json  config.toml  darkswap-service.ps1  darkswap.service
darkswap-daemon/src/: api.rs  config.rs  error.rs  handlers.rs  main.rs  types.rs
darkswap-lib/: Cargo.toml  README.md  package.json  rollup.config.js  tsconfig.json
darkswap-lib/examples/: simple-trade.ts
darkswap-lib/src/: client.ts  constants.ts  error.rs  index.ts  lib.rs  orderbook.ts  p2p.ts  trade.ts  types.rs  types.ts  utils.rs
darkswap-network/: Cargo.toml
darkswap-network/darkswap-p2p/: Cargo.toml
darkswap-network/darkswap-relay/: Cargo.toml  Dockerfile  REMAINING_TASKS_UPDATED.md  config.toml  darkswap-relay.service  docker-compose.yml  prometheus.yml
darkswap-p2p/: Cargo.toml  README.md
darkswap-p2p/examples/: auth_relay_example.rs  connection_pool_example.rs  encryption_example.rs  grafana-dashboard.json  metrics_example.rs  metrics_server.rs  prometheus-alerts.yml  relay_connection_example.rs  simple_node.rs  webrtc_example.rs
darkswap-p2p/src/: auth.rs  behaviour.rs  circuit_relay.rs  config.rs  connection_pool.rs  discovery.rs  encryption.rs  error.rs  lib.rs  message.rs  metrics.rs  network.rs  protocol.rs  relay_connection_pool.rs  relay_discovery.rs  transport.rs  webrtc_connection.rs  webrtc_signaling_client.rs  webrtc_transport.rs
darkswap-p2p/tests/: connection_pool_tests.rs  integration_tests.rs  relay_connection_pool_tests.rs  relay_discovery_tests.rs
darkswap-relay/: .env.example  Cargo.toml  Dockerfile  README.md  REMAINING_CHECKLIST.md  REMAINING_TASKS.md  build.rs  build.sh  config.toml  deploy.sh  generate-certs.sh  run-integration-tests.sh
darkswap-relay/certs/: cert.pem  key.pem
darkswap-relay/src/: auth.rs  circuit.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  server.rs  signaling.rs  utils.rs  webrtc.rs
darkswap-relay/tests/: signaling_server_test.rs
darkswap-sdk/: Cargo.toml  build.sh  optimize-wasm.sh  run-phase1-tests.sh
darkswap-sdk/benches/: network_benchmarks.rs  orderbook_benchmarks.rs  trade_benchmarks.rs
darkswap-sdk/docs/: predicate_alkanes.md
darkswap-sdk/examples/: bridge_example.rs  composite_predicate_example.rs  multi_signature_predicate.rs  performance_optimization.rs  predicate_alkane_example.rs  predicate_alkanes_example.rs  relay_example.rs  runes_alkanes_trade.rs  runes_alkanes_trading.rs  simple_trade.rs  simple_trade_fixed.rs  time_locked_predicate_example.rs  trading_bot.rs  trading_bot_fixed.rs
darkswap-sdk/src/: alkane_trade.rs  alkanes.rs  bitcoin_utils.rs  bridge_integration.rs  config.rs  error.rs  lib.rs  network.rs  orderbook.rs  performance.rs  predicates.rs  runes.rs  runestone.rs  trade.rs  types.rs  wasm.rs  wasm_fixed.rs  wasm_webrtc.rs  wasm_webrtc_methods.rs  webrtc_compression.rs  webrtc_connection_pool.rs  webrtc_data_channel.rs  webrtc_error_handler.rs  webrtc_message_batch.rs  webrtc_relay.rs  webrtc_signaling.rs
darkswap-sdk/tests/: alkane_handler_tests.rs  alkane_handler_tests_fixed.rs  alkane_mock_test.rs  alkane_process_transaction_test.rs  alkane_protocol_balance_test.rs  alkane_protocol_fix.rs  alkane_trade_standalone.rs  alkane_transfer_test.rs  alkane_validation_test.rs  alkanes_integration_test.rs  alkanes_test.rs  api_client_tests.rs  bdk_wallet_tests.rs  bitcoin_utils_standalone.rs  bitcoin_utils_test.rs  circuit_relay_tests.rs  darkswap_tests.rs  darkswap_tests_fixed.rs  end_to_end_tests.rs  error_handling_tests.rs  integration_tests.rs  mod.rs  orderbook_tests.rs  p2p_network_tests.rs  performance_tests.rs  predicate_alkanes_test.rs  psbt_handler_tests.rs  rune_handler_tests.rs  rune_handler_tests_fixed.rs  runes_integration_test.rs  runes_test.rs  runestone_test.rs  trade_manager_tests.rs  trade_tests.rs  wallet_tests.rs  (+5 more)
darkswap-support/: Cargo.toml  build.rs
darkswap-wasm/: Cargo.toml
darkswap-web-sys/: Cargo.toml  README.md  build.sh  index.d.ts  package.json  run-integration-tests.sh  run-tests.sh  tsconfig.json  vitest.config.ts
(+938 files in other folders)
