[workspace]
resolver = "2"
members = [
    "darkswap-sdk",
    "darkswap-cli",
    "darkswap-daemon",
    "darkswap-support",
    "darkswap-p2p", # Uncomment darkswap-p2p
    "darkswap-web-sys",
    "darkswap-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DarkSwap Team"]
license = "MIT"
repository = "https://github.com/darkswap/darkswap"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Bitcoin dependencies
bitcoin = { version = "0.30", features = ["rand", "serde"] }

# P2P networking dependencies
libp2p = { version = "0.53.1", default-features = false, features = ["gossipsub", "identify", "kad", "noise", "ping", "tcp", "tokio", "yamux", "websocket", "relay", "macros", "request-response", "dns"] }
libp2p-tcp = { version = "0.44.0", features = ["async-io"] }
libp2p-webrtc = { version = "0.10.0" }
libp2p-webrtc-websys = { version = "0.5.0" }
prost = "0.11"
prost-build = "0.11"
bytes = "1.4"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
rust_decimal = { version = "1.30", features = ["serde"] }
hex = "0.4"
rand = "0.8"

# WASM support
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "RtcPeerConnection",
    "RtcSessionDescription",
    "RtcIceCandidate",
    "RtcDataChannel",
    "MediaStream",
    "Navigator",
    "MediaDevices",
] }
console_log = "0.2"
console_error_panic_hook = "0.1"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# HTTP server dependencies
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
hyper = "0.14"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Optimize for faster compilation during development.
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false