[package]
name = "darkswap-daemon"
version = "0.1.0"
edition = "2021"
description = "DarkSwap daemon for P2P trading of Bitcoin, runes, and alkanes"
authors = ["DarkSwap Team"]
license = "MIT"

[dependencies]
# Core dependencies
darkswap-sdk = { path = "../darkswap-sdk" }
darkswap-p2p = { path = "../darkswap-p2p" }
darkswap-lib = { path = "../darkswap-lib" }
darkswap-support = { path = "../darkswap-support" }

# Async runtime
tokio = { workspace = true }
futures-util = "0.3"

# Web server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Authentication
jsonwebtoken = "8.3"
argon2 = "0.5"
rand = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
derive_more = "0.99"
dotenv = "0.15"
config = "0.13"
lazy_static = "1.4"
clap = { workspace = true }

[dev-dependencies]
mockall = "0.11"
serial_test = "2.0"
tempfile = "3.5"
test-log = "0.2"

[features]
default = []
test-utils = []