[package]
name = "darkswap-lib"
version = "0.1.0"
edition = "2021"
description = "Common library for DarkSwap"
authors = ["DarkSwap Team"]
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.11"
serial_test = "2.0"