[workspace]
resolver = "2"
members = [
    "darkswap-p2p",
    "darkswap-relay",
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# P2P networking dependencies
libp2p = { version = "0.50", default-features = false, features = ["gossipsub", "identify", "kad", "noise", "ping", "tcp", "tokio", "yamux", "websocket", "relay"] }
futures = "0.3"
async-trait = "0.1"

# Utilities
rust_decimal = { version = "1.30", features = ["serde"] }
hex = "0.4"
rand = "0.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Optimize for faster compilation during development.
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false