[package]
name = "darkswap-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
darkswap-support = { path = "../darkswap-support" }
libp2p = { version = "0.50", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "identify", "kad", "gossipsub", "relay"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
env_logger = "0.10"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
void = "1.0"
url = "2.4"

[features]
default = ["native"]
native = []
wasm = ["libp2p/wasm-bindgen", "libp2p/wasm-ext"]

[[example]]
name = "webrtc_example"
path = "examples/webrtc_example.rs"