[package]
name = "darkswap-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking for DarkSwap"
authors = ["DarkSwap Team"]
license = "MIT"

[dependencies]
# Core dependencies
darkswap-lib = { path = "../darkswap-lib" }
darkswap-support = { path = "../darkswap-support" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"

# P2P networking
libp2p = { version = "0.50.1", default-features = false, features = ["gossipsub", "identify", "kad", "noise", "ping", "tcp", "tokio", "yamux", "websocket", "relay", "macros", "request-response"] }
libp2p-webrtc = { version = "0.9.0-alpha" }
libp2p-webrtc-websys = { version = "0.4.0-alpha" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Navigator", "MediaDevices", "MediaStreamConstraints", "RtcPeerConnection", "RtcConfiguration", "RtcIceServer", "RtcSessionDescription", "RtcSdpType", "RtcIceCandidate", "RtcIceCandidateInit"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
mockall = "0.11"
serial_test = "2.0"

[features]
default = []
webrtc = []