[package]
name = "darkswap-relay"
version = "0.1.0"
edition = "2021"
description = "DarkSwap Relay Server for WebRTC and Circuit Relay"
authors = ["DarkSwap Team"]
license = "MIT"
repository = "https://github.com/darkswap/darkswap-relay"
build = "build.rs"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# WebRTC
webrtc = "0.7"
webrtc-ice = "0.9"
webrtc-dtls = "0.7"
webrtc-sctp = "0.7"
webrtc-data = "0.7"

# Networking
libp2p = { version = "0.52", features = ["full"] }
libp2p-webrtc = { version = "0.5", features = ["tokio"] }
libp2p-webrtc-server = "0.2"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
axum = { version = "0.6", features = ["ws"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
base64 = "0.21"

# Cryptography
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = "2.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.3", features = ["derive"] }

# Utilities
dashmap = "5.4"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
once_cell = "1.17"

[dev-dependencies]
tempfile = "3.5"
assert_matches = "1.5"
criterion = "0.5"
mockall = "0.11"

[build-dependencies]
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[features]
default = []
metrics = []
tracing = []