[package]
name = "darkswap-relay"
version = "0.1.0"
edition = "2021"
description = "Relay server for DarkSwap"
authors = ["DarkSwap Team"]
license = "MIT"

[dependencies]
# Core dependencies
darkswap-lib = { path = "../darkswap-lib" }
darkswap-support = { path = "../darkswap-support" }
# darkswap-p2p = { path = "../darkswap-p2p" } # Temporarily exclude darkswap-p2p

# Async runtime
tokio = { version = "1", features = ["full"] } # Align with workspace version
futures-util = "0.3"

# P2P networking
libp2p = { version = "0.52.4", default-features = false, features = ["tcp", "websocket", "noise", "yamux", "identify", "ping", "kad", "gossipsub", "request-response", "relay", "autonat", "dcutr", "dns"] } # Align with workspace version and features
libp2p-webrtc = { version = "0.9.0-alpha" } # Keep alpha version for now
libp2p-webrtc-websys = { version = "0.4.0-alpha" } # Keep alpha version for now

# Web server
actix-web = "4.3"
actix-cors = "0.6"
actix-files = "0.6"
actix-rt = "2.8"

# Serialization
serde = { workspace = true } # Align with workspace version
serde_json = { workspace = true } # Align with workspace version

# Error handling
thiserror = { workspace = true } # Align with workspace version
anyhow = { workspace = true } # Align with workspace version

# Logging
log = { workspace = true } # Align with workspace version
env_logger = { workspace = true } # Align with workspace version

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = { workspace = true } # Align with workspace version
clap = { version = "4.4", features = ["derive"] } # Align with workspace version
dotenv = "0.15" # Keep existing version
config = "0.13" # Keep existing version

dashmap = "5.4" # Add dashmap dependency
webrtc = "0.9" # Add webrtc dependency
tracing = { workspace = true } # Add tracing dependency
jsonwebtoken = "8.3" # Add jsonwebtoken dependency
warp = "0.3" # Add warp dependency
prometheus = "0.13" # Add prometheus dependency
toml = "0.7" # Add toml dependency

[dev-dependencies]
mockall = "0.11"
serial_test = "2.0"