[package]
name = "darkswap-sdk"
version = "0.1.0"
edition = "2021"
authors = ["DarkSwap Team"]
description = "DarkSwap SDK for decentralized peer-to-peer trading of Bitcoin, runes, and alkanes"
repository = "https://github.com/darkswap/darkswap"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "runes", "alkanes", "p2p", "trading"]
categories = ["cryptography", "cryptocurrency", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Bitcoin
bitcoin = { workspace = true }
# Disable BDK for now due to dependency conflicts
# bdk = { version = "0.27.1", optional = true, features = ["all-keys", "keys-bip39"] }

# P2P networking
libp2p = { workspace = true }
libp2p-gossipsub = "0.42.0"
libp2p-mdns = { version = "0.42.0", features = ["tokio", "async-io"] }
libp2p-noise = "0.41.0"
libp2p-yamux = "0.42.0"
libp2p-relay = "0.14.0"
libp2p-quic = { version = "0.9.2-alpha", features = ["tokio"] }
libp2p-dcutr = "0.7.0"
libp2p-webrtc = { version = "0.9.0-alpha", optional = true, features = ["tokio"] }
libp2p-swarm-derive = "0.31.0"

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }

# Cryptography
rand = { workspace = true }
sha2 = "0.10.6"

# Compression
flate2 = "1.0.28"

# Utilities
rust_decimal = { workspace = true }
rust_decimal_macros = "1.29.1"
num-traits = "0.2.15"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
log = { workspace = true }
byteorder = "1.4.3"
env_logger = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = "1.4.0"
zeroize = "1.6.0"
trust-dns-resolver = "0.22.0"
base64 = "0.13.0"

# WebAssembly
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
tempfile = "3.5.0"
criterion = "0.4.0"
mockall = "0.11.4"
wasm-bindgen-test = "0.3.36"

[features]
default = []
# Disable BDK wallet feature for now
# bdk-wallet = ["bdk"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "console_error_panic_hook"]
webrtc = ["libp2p-webrtc"]
full = ["wasm", "webrtc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]