[package]
name = "darkswap-sdk"
version = "0.1.0"
edition = "2021"
description = "DarkSwap SDK"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["tokio", "bitcoin", "libp2p", "base64", "log", "rand", "hex"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "wasm-bindgen-futures"]
bdk-wallet = ["bdk"]
webrtc = []

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rust_decimal = "1.30"
tokio = { version = "1.0", features = ["full"], optional = true }
bitcoin = { version = "0.30", optional = true }
libp2p = { version = "0.52", optional = true }
base64 = { version = "0.21", optional = true }
log = { version = "0.4", optional = true }
bdk = { version = "0.28", optional = true }
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
arrayvec = "0.7"
rand = { version = "0.8", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
