[package]
name = "darkswap-support"
version = "0.1.0"
edition = "2021"
description = "Support library for DarkSwap"
authors = ["DarkSwap Team"]
license = "MIT"

[dependencies]
# Core dependencies
darkswap-lib = { path = "../darkswap-lib" }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"

# Crypto
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "8.3"
argon2 = "0.5"

[dev-dependencies]
mockall = "0.11"
serial_test = "2.0"