[package]
name = "darkswap-web-sys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = []

[dependencies]
darkswap-support = { path = "../darkswap-support" }
darkswap-p2p = { path = "../darkswap-p2p", features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "RtcPeerConnection",
    "RtcSessionDescription",
    "RtcIceCandidate",
    "RtcDataChannel",
    "MediaStream",
    "Navigator",
    "MediaDevices",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
futures = "0.3"
log = "0.4"
console_log = "0.2"
rand = "0.8"
console_error_panic_hook = "0.1.7"