[package]
name = "darkswap-web-sys"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the DarkSwap SDK"
authors = ["DarkSwap Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "Location",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "JsonWebKey",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
darkswap-sdk = { path = "../darkswap-sdk" }
darkswap-support = { path = "../darkswap-support" }
hex = "0.4"
base64 = "0.21"
bitcoin = "0.30.0"
log = "0.4"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "s"
lto = true