[package]
name = "darkswap-lib"
version = "0.1.0"
edition = "2021"
description = "Core library for DarkSwap"
authors = ["DarkSwap Team"]
license = "MIT"

[dependencies]
# Bitcoin dependencies
bitcoin = "0.30.0"
bdk = "0.28.0"
bip39 = "1.0.1"  # Using the older version that's compatible with bdk

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Cryptography
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.5"