[package]
name = "darkswap-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking for DarkSwap"
authors = ["DarkSwap Team"]
license = "MIT"

[dependencies]
# Networking dependencies
libp2p = { version = "0.52", features = ["tcp", "dns", "websocket", "noise", "mplex", "yamux", "ping", "identify", "kad", "gossipsub", "mdns", "request-response", "relay"] }
webrtc = "0.7"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Cryptography
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.5"