[package]
name = "darkswap-relay"
version = "0.1.0"
edition = "2021"
description = "Relay server for DarkSwap"
authors = ["DarkSwap Team"]
license = "MIT"

[dependencies]
# Core dependencies
darkswap-lib = { path = "../../darkswap-core/darkswap-lib" }
darkswap-support = { path = "../../darkswap-core/darkswap-support" }
darkswap-p2p = { path = "../darkswap-p2p" }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures-util = "0.3"

# P2P networking
libp2p = { version = "0.50", default-features = false, features = ["tcp", "websocket", "noise", "yamux", "identify", "ping", "kad", "gossipsub", "request-response", "relay", "autonat", "dcutr"] }
libp2p-webrtc = { version = "0.9.0-alpha" }
libp2p-webrtc-websys = { version = "0.4.0-alpha" }

# Web server
actix-web = "4.3"
actix-cors = "0.6"
actix-files = "0.6"
actix-rt = "2.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"
clap = { version = "4.3", features = ["derive"] }
dotenv = "0.15"
config = "0.13"

[dev-dependencies]
mockall = "0.11"
serial_test = "2.0"